# foxglove_compressed_video_transport-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  foxglove_plugins.xml  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ci.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/foxglove_compressed_video_transport/: parameter_definition.hpp  publisher.hpp  subscriber.hpp  utils.hpp
launch/: cam.launch.py
rpm/: ros-humble-foxglove-compressed-video-transport.spec  ros-iron-foxglove-compressed-video-transport.spec  ros-jazzy-foxglove-compressed-video-transport.spec  ros-kilted-foxglove-compressed-video-transport.spec  ros-rolling-foxglove-compressed-video-transport.spec  template.spec
src/: parameter_definition.cpp  publisher.cpp  subscriber.cpp  utils.cpp
test/: test_1.cpp
